# ampsmotion

./: .gitignore  AmpsMotion_Engineering_Guide.md  README.md  alembic.ini  app.py  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
camera/: __init__.py  capture.py  recorder.py  replay_engine.py  ring_buffer.py
engine/: __init__.py  player_queue.py  rules.py  scoring.py  timer.py  tournament_bracket.py
gui/: __init__.py  audience_display.py  camera_feed.py  icons.py  main_window.py  replay_control.py
gui/styles/: ampsmotion.qss  theme.py
gui/widgets/: __init__.py  court_visualizer.py  match_history.py  match_setup.py  round_timer.py  scoreboard.py  scoring_panel.py  substitution_panel.py  tournament_bracket.py
migrations/: env.py
migrations/versions/: 20260220_0001_001_initial_schema.py
models/: __init__.py  base.py  bout.py  foul.py  match.py  official.py  player.py  schemas.py  team.py  tournament.py
services/: __init__.py  event_bus.py  export.py
tests/: __init__.py  test_player_queue.py  test_replay_engine.py  test_rules.py  test_scoring.py  test_timer.py  test_tournament_bracket.py
